--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project-Name</title>
+    <title>Progress steps</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <div class="image" style="background-image: src()">
-        <h3></h3>
+      <div class="progress-steps">
+        <div class="progress-bar"></div>
+        <div class="circle active">1</div>
+        <div class="circle">2</div>
+        <div class="circle">3</div>
+        <div class="circle">4</div>
       </div>
+      <button id="prev" disabled>Prev</button>
+      <button id="next">Next</button>
     </div>
     <script src="main.js"></script>
   </body>
